Fix ToC visibility

--- a/_sass/mymadlab/_layout.scss
+++ b/_sass/mymadlab/_layout.scss
@@ -198,11 +198,11 @@
   width: 250px;
   max-height: calc(100vh - 200px);
   overflow-y: auto;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.8);
   border: 1px solid $border-color;
   border-radius: 6px;
   padding: 1rem;
-  z-index: 100;
+  z-index: 1000;
   
   // Hide on smaller screens
   @include media-query($on-laptop) {
